--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -38,3 +38,80 @@
     width: 50px;
     margin-left: 2rem;
 }
+
+
+@media (max-width: 500px) {
+    .navbar {
+        padding: 0;
+        height: 7vh;
+        border-bottom: none;
+        margin: 0;
+        width: 100vw;
+        position: fixed;
+        background-color: #fff;
+    }
+
+    .navbar img {
+        height: 15px ;
+    }
+
+    .navbar div {
+        flex-direction: row-reverse;
+        gap: 5px;
+        height: 100%;
+    }
+
+    .navbar button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: none;
+        height: 100%;
+
+    }
+
+    .mobile-menu {
+        height: 100vh;
+        width: 100vw;
+        background-color: rgba(61, 61, 61, 0.104);
+        position: fixed;
+    }
+
+    .mobile-menu ul {
+        background-color: #fff;
+        position: fixed;
+        padding: 0;
+        margin: 0;
+        width: 30vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        animation: sliding 0.2s;
+        
+    }
+
+    @keyframes sliding {
+        from {
+            transform: translateX(-300px);
+        }
+        to {
+            transform: translateX(0);
+        }
+        
+    }
+
+    .profile {
+        margin: 0;
+        width: 16px;
+        height: 16px;
+    }
+
+
+
+
+}
