--- a/src/components/ProductDescription.module.css
+++ b/src/components/ProductDescription.module.css
@@ -11,6 +11,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   color: hsl(26, 100%, 55%);
+  
 }
 
 .product-description h1 {
@@ -29,6 +30,7 @@
   font-size: 0.8rem;
   color: hsl(219, 9%, 45%);
   width: 73%;
+  
 }
 
 .discount {
@@ -70,7 +72,6 @@
   background-color: hsl(223, 64%, 98%);
   text-align: center;
   border-radius: 5px;
-  
 }
 
 .buying div button {
@@ -90,30 +91,95 @@
 }
 
 .buying div p {
-    font-size: 1rem
+  font-size: 1rem;
 }
 
 .buying {
-    display: flex;
-    margin-top: 10px;
-    gap: 1rem;
+  display: flex;
+  margin-top: 10px;
+  gap: 1rem;
 }
 
 .buying button {
- border: none;
- border-radius: 5px;
- width: 60%;
- display: flex;
- justify-content: center;
- align-items: center;
- background-color: hsl(26, 100%, 55%);
- cursor: pointer;
- gap: 1rem;
- color: #fff;
- font-weight: bold;
- transition: 0.2s ease;
+  border: none;
+  border-radius: 5px;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(26, 100%, 55%);
+  cursor: pointer;
+  gap: 1rem;
+  color: #fff;
+  font-weight: bold;
+  transition: 0.2s ease;
 }
 
 .buying button:hover {
-    background-color: hsl(26, 92%, 64%);
+  background-color: hsl(26, 92%, 64%);
+}
+
+@media (max-width: 500px) {
+  .product-description {
+    width: 100vw;
+    height: auto;
+    padding: 0;
+  }
+
+  .product-description h2 {
+    font-size: 1.2rem;
+  }
+
+  .product-description p {
+    font-size: 1.2rem;
+    width: 100vw;
+    margin: 0;
+  }
+
+  .discount {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+  .discount p {
+    font-size: 1rem;
+    
+    width: 3rem;
+ 
+  }
+
+  .real-price {
+    position: static;
+    display: block;
+
+  }
+  .real-price p {
+    width: auto;
+    background-color: transparent;
+  }
+
+  .buying {
+    flex-direction: column;
+  }
+
+  .buying div {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .buying button {
+    width: 100vw;
+    height: 3rem;
+  }
+
+  .buying div p {
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
